Feat: Implement API Structure to LLM Server
- Refactor token.go, auth_handler
- Add UserProfile struct in User struct
