# docs/swagger.json
@@ -243,6 +243,9 @@
                     "type": "string",
                     "example": "password123"
                 },
+                "profile": {
+                    "$ref": "#/definitions/models.UserProfile"
+                },
                 "username": {
                     "type": "string",
                     "example": "new_user"
@@ -255,6 +258,20 @@
                 "message": {
                     "type": "string",
                     "example": "User created successfully"
+                }
+            }
+        },
+        "models.UserProfile": {
+            "type": "object",
+            "properties": {
+                "age": {
+                    "type": "integer"
+                },
+                "gender": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
                 }
             }
         }
